<resources>
    <string name="app_name">MyVoice</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">profile</string>
    <string name="friends">friends</string>
    <string name="voice">VOICE</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="register">Register</string>
    <string name="already_has_an_account_n_sign_in">Already has an account? \n sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_has_account_sign_in">Do not has account?\n Sign In</string>
    <string name="nawaraj">Nawaraj</string>
    <string name="user_image">user image</string>
    <string name="status">Status</string>
    <string name="record">RECORD</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="message">message</string>
    <string name="logging">Logging...</string>
    <string name="registration_in_process">Registration in process</string>
    <string name="does_not_have_account_register">Does not have account? \n Register</string>
    <string name="full_name">Full Name</string>
    <string name="change_profile_image">change profile image</string>
    <string name="sign_out_small_letter">sign out</string>
    <string name="name">name</string>
    <string name="edit_icon">edit icon</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="update">update</string>
    <string name="add_friend">add friend</string>
    <string name="ignore">ignore</string>
    <string name="friend_suggestion">Friend Suggestion</string>
    <string name="accept">Accept</string>
    <string name="friend_request">Friend Request</string>
    <string name="nov_2_2019">Nov 2, 2019</string>
    <string name="this_is_my_status">This is my status.</string>
    <string name="like">like</string>
    <string name="liked">liked</string>
    <string name="comment">comment</string>
    <string name="_5_people_like_your_post">5 people like your post.</string>
    <string name="leave_your_comment">leave your comment</string>
    <string name="_3_comments_on_this_post">3 comments on this post</string>
    <string name="comment_here">comment here</string>
</resources>
