<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textview_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="24sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edittext_create_account_email"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edittext_create_account_email"
        style="@style/edittext_with_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_create_account"
        app:layout_constraintBottom_toTopOf="@+id/edittext_create_account_password"/>

    <EditText
        android:id="@+id/edittext_create_account_password"
        style="@style/edittext_with_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edittext_create_account_re_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_create_account_email" />

    <EditText
        android:id="@+id/edittext_create_account_re_password"
        style="@style/edittext_with_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/edittext_create_account_password" />

    <Button
        style="@style/button_dark_green"
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_create_account_re_password" />

</androidx.constraintlayout.widget.ConstraintLayout>