<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="16dp">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_status"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/user_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/edit_icon"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/image_view_status"
                app:layout_constraintStart_toEndOf="@+id/image_view_status"
                app:layout_constraintTop_toTopOf="@+id/image_view_status" />

            <TextView
                android:id="@+id/textview_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nov_2_2019"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/image_view_status"
                app:layout_constraintTop_toBottomOf="@+id/image_view_status" />

            <TextView
                android:id="@+id/textview_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/this_is_my_status"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/textview_date"
                app:layout_constraintTop_toBottomOf="@id/textview_date" />

            <TextView
                android:id="@+id/number_of_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_5_people_like_your_post"
                android:textColor="@color/colorDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/textview_status"
                app:layout_constraintTop_toBottomOf="@id/textview_status" />

            <TextView
                android:id="@+id/number_of_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_comments_on_this_post"
                android:textColor="@color/colorDark"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/number_of_like"
                app:layout_constraintTop_toBottomOf="@id/number_of_like" />

            <Button
                android:id="@+id/button_status_like"
                style="@style/button_light_green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/like"
                app:layout_constraintEnd_toStartOf="@+id/button_status_comment"
                app:layout_constraintStart_toStartOf="@+id/number_of_comment"
                app:layout_constraintTop_toBottomOf="@+id/number_of_comment" />

            <Button
                android:id="@+id/button_status_comment"
                style="@style/button_dark_green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                app:layout_constraintBottom_toBottomOf="@+id/button_status_like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_status_like"
                app:layout_constraintTop_toTopOf="@+id/button_status_like"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_status_like" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>


    <EditText
        android:id="@+id/edittext_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:hint="@string/comment_here"
        android:inputType="textMultiLine"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="100dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:id="@+id/button_add_comment"
        app:layout_constraintTop_toTopOf="@id/edittext_comment"
        app:layout_constraintBottom_toBottomOf="@id/edittext_comment"
        app:layout_constraintEnd_toEndOf="@id/edittext_comment"/>


</androidx.constraintlayout.widget.ConstraintLayout>
