<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_request"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/user_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textview_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/image_view_request"
            app:layout_constraintTop_toTopOf="@+id/image_view_request"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_request"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:text="@string/edit_icon"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_accept"
            style="@style/button_light_green"
            android:text="@string/accept"
            app:layout_constraintTop_toBottomOf="@+id/image_view_request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_ignore"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_ignore"
            style="@style/button_dark_green"
            android:text="@string/ignore"
            app:layout_constraintTop_toTopOf="@+id/button_accept"
            app:layout_constraintBottom_toBottomOf="@+id/button_accept"
            app:layout_constraintStart_toEndOf="@id/button_accept"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>