<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/user_image"
        app:layout_constraintBottom_toTopOf="@+id/edittext_status"
        app:layout_constraintStart_toEndOf="@+id/textview_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textview_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nawaraj"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/image_user"
        app:layout_constraintStart_toEndOf="@+id/image_user"
        app:layout_constraintTop_toTopOf="@id/image_user" />



    <EditText
        android:id="@+id/edittext_status"
        style="@style/edittext_with_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_user" />

    <Button
        android:id="@+id/button_record"
        style="@style/button_dark_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_status" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_record" />
</androidx.constraintlayout.widget.ConstraintLayout>