<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/colorDark"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/change_image"
            style="@style/button_blue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_image"
            app:layout_constraintEnd_toEndOf="@id/profile_image"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/name"
            style="@style/textview_default_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_image" />


        <TextView
            android:id="@+id/user_name"
            style="@style/textview_default_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/nawaraj"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/name" />

        <EditText
            android:id="@+id/edittext_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="24dp"
            android:layout_marginStart="16dp"
            android:paddingEnd="16dp"
            android:visibility="gone"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@id/name"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintEnd_toStartOf="@id/button_update_user_name"
            app:layout_constraintTop_toTopOf="@id/name" />

        <TextView
            android:id="@+id/email"
            style="@style/textview_default_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/user_email"
            style="@style/textview_default_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_gmail_com"
            app:layout_constraintBottom_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintTop_toTopOf="@+id/email" />


        <ImageView
            android:id="@+id/edit_user_name"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/edit_icon"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="@id/user_name"
            app:layout_constraintStart_toEndOf="@+id/user_name"
            app:layout_constraintTop_toTopOf="@+id/user_name" />

        <Button
            android:id="@+id/button_update_user_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_dark_green"
            android:padding="0dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/edittext_user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edittext_user_name" />


        <TextView
            android:id="@+id/sign_out"
            style="@style/button_blue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?actionBarSize"
            android:text="@string/sign_out_small_letter"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>