<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/image_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_user_name"
        android:text="@string/nawaraj"
        style="@style/textview_default_style"
        app:layout_constraintTop_toTopOf="@+id/image_user"
        app:layout_constraintBottom_toBottomOf="@+id/image_user"
        app:layout_constraintStart_toEndOf="@id/image_user"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_date"
        app:layout_constraintTop_toBottomOf="@+id/image_user"
        app:layout_constraintStart_toStartOf="@+id/image_user"
        android:text="@string/nov_2_2019"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview_comment"
        style="@style/textview_default_style"
        app:layout_constraintTop_toBottomOf="@+id/textview_date"
        app:layout_constraintStart_toStartOf="@+id/textview_date"
        android:text="@string/comment"/>

</androidx.constraintlayout.widget.ConstraintLayout>